MDB_Bridge/imgui_exports.h

// ===== Tooltips =====
IMGUI_EXPORT void igSetTooltip(const char* fmt, ...);
// ===== Misc =====
IMGUI_EXPORT void igTextColored(ImVec4 col, const char* fmt, ...);
IMGUI_EXPORT void igBulletText(const char* fmt, ...);
// ===== Widgets: Color =====
IMGUI_EXPORT bool igColorButton(const char* desc_id, ImVec4 col, ImGuiColorEditFlags flags, ImVec2 size);
// ===== Context Menus / Popups =====
IMGUI_EXPORT bool igBeginPopupContextItem(const char* str_id, ImGuiPopupFlags popup_flags);
IMGUI_EXPORT bool igBeginPopup(const char* str_id, ImGuiWindowFlags flags);
IMGUI_EXPORT void igEndPopup();
IMGUI_EXPORT void igOpenPopup_Str(const char* str_id, ImGuiPopupFlags popup_flags);
IMGUI_EXPORT void igCloseCurrentPopup();
// ===== Clipboard =====
IMGUI_EXPORT void igSetClipboardText(const char* text);