MDB_Bridge/imgui_integration.h

// ========== DirectX Version Detection ==========

enum MdbDxVersion {
    MDB_DX_UNKNOWN = 0,
    MDB_DX_11 = 11,
    MDB_DX_12 = 12
};
// Get detected DirectX version
MDB_IMGUI_API MdbDxVersion mdb_imgui_get_dx_version();
// ========== ImGui Lifecycle ==========

// Initialize ImGui with auto-detected DirectX version
// Returns true on success
MDB_IMGUI_API bool mdb_imgui_init();
// Shutdown ImGui and unhook everything
MDB_IMGUI_API void mdb_imgui_shutdown();
// Check if ImGui is initialized
MDB_IMGUI_API bool mdb_imgui_is_initialized();
// ========== Draw Callback ==========

// Callback type for C# draw functions
// Called each frame during Present hook, after ImGui::NewFrame()
typedef void (*MdbImGuiDrawCallback)();
// Register a draw callback (called from C#)
MDB_IMGUI_API void mdb_imgui_register_draw_callback(MdbImGuiDrawCallback callback);
// ========== Input Control ==========

// Toggle whether ImGui captures input (F2 by default)
MDB_IMGUI_API void mdb_imgui_set_input_enabled(bool enabled);
// Check if ImGui input is enabled
MDB_IMGUI_API bool mdb_imgui_is_input_enabled();
// Set the toggle key (default: VK_F2)
MDB_IMGUI_API void mdb_imgui_set_toggle_key(int vkCode);