Documentation/Examples/MDB_Explorer_ImGui/ImGuiBindings.cs


        public static bool ColorButton(string desc_id, Vector4 col, int flags = 0, Vector2 size = default)
        {
            return igColorButton(desc_id, col, flags, size) != 0;
        }

        // ===== Misc =====

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igTextColored")]
        private static extern void igTextColored(Vector4 col, [MarshalAs(UnmanagedType.LPStr)] string fmt);

        public static void TextColored(Vector4 col, string text)
        {
            igTextColored(col, text ?? "");
        }

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igBulletText")]
        private static extern void igBulletText([MarshalAs(UnmanagedType.LPStr)] string fmt);

        public static void BulletText(string text)
        {
            igBulletText(text ?? "");
        }

        // ===== Tooltips =====

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igSetTooltip")]
        private static extern void igSetTooltip([MarshalAs(UnmanagedType.LPStr)] string fmt);

        public static void SetTooltip(string text)
        {
            igSetTooltip(text ?? "");
        }

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igBeginTooltip")]
        private static extern byte igBeginTooltip();

        public static bool BeginTooltip()
        {
            return igBeginTooltip() != 0;
        }

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igEndTooltip")]
        public static extern void EndTooltip();

        // ===== Context Menus / Popups =====

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igBeginPopupContextItem")]
        private static extern byte igBeginPopupContextItem([MarshalAs(UnmanagedType.LPStr)] string str_id, int popup_flags);

        public static bool BeginPopupContextItem(string str_id = null, int popup_flags = 1) // 1 = ImGuiPopupFlags_MouseButtonRight
        {
            return igBeginPopupContextItem(str_id, popup_flags) != 0;
        }

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igBeginPopup")]
        private static extern byte igBeginPopup([MarshalAs(UnmanagedType.LPStr)] string str_id, ImGuiWindowFlags flags);

        public static bool BeginPopup(string str_id, ImGuiWindowFlags flags = ImGuiWindowFlags.None)
        {
            return igBeginPopup(str_id, flags) != 0;
        }

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igEndPopup")]
        public static extern void EndPopup();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igOpenPopup_Str")]
        public static extern void OpenPopup([MarshalAs(UnmanagedType.LPStr)] string str_id, int popup_flags = 0);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igCloseCurrentPopup")]
        public static extern void CloseCurrentPopup();

        // ===== Clipboard =====

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "igSetClipboardText")]
        public static extern void SetClipboardText([MarshalAs(UnmanagedType.LPStr)] string text);
    }

    #endregion

    #region ImGui Bridge (Controller functions)

    /// <summary>
    /// Delegate type for ImGui draw callbacks.
    /// </summary>
    [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
    public delegate void ImGuiDrawCallback();

    /// <summary>
    /// P/Invoke declarations for the native ImGui controller in MDB_Bridge.
    /// </summary>
    public static class ImGuiBridge
    {
        private const string DllName = "MDB_Bridge.dll";

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern DxVersion mdb_imgui_get_dx_version();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool mdb_imgui_init();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mdb_imgui_shutdown();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool mdb_imgui_is_initialized();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mdb_imgui_register_draw_callback(IntPtr callback);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mdb_imgui_set_input_enabled([MarshalAs(UnmanagedType.I1)] bool enabled);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        public static extern bool mdb_imgui_is_input_enabled();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mdb_imgui_set_toggle_key(int vkCode);
    }

    #endregion

    #region ImGui Controller

    /// <summary>
    /// Controller that manages the ImGui integration between native and managed code.
    /// </summary>
    public class ImGuiController : IDisposable
    {
        private const string LOG_TAG = "ImGuiController";

        private ImGuiDrawCallback _drawCallback;
        private IntPtr _drawCallbackPtr;
        private bool _initialized;
        private bool _disposed;

        /// <summary>
        /// Action called each frame to draw ImGui content.
        /// </summary>
        public Action OnDraw { get; set; }

        /// <summary>
        /// Whether ImGui is initialized and ready to draw.
        /// </summary>
        public bool IsInitialized => _initialized && ImGuiBridge.mdb_imgui_is_initialized();

        /// <summary>
        /// Whether ImGui is capturing input.
        /// </summary>
        public bool IsInputEnabled
        {
            get => ImGuiBridge.mdb_imgui_is_input_enabled();
            set => ImGuiBridge.mdb_imgui_set_input_enabled(value);
        }

        /// <summary>
        /// The detected DirectX version.
        /// </summary>
        public DxVersion DirectXVersion => ImGuiBridge.mdb_imgui_get_dx_version();

        /// <summary>
        /// Initialize the ImGui controller.
        /// </summary>
        public bool Initialize()
        {
            if (_initialized)
            {
                ModLogger.LogInternal(LOG_TAG, "[WARN] Already initialized");
                return true;
            }

            ModLogger.LogInternal(LOG_TAG, "[INFO] Initializing ImGui...");

            try
            {
                if (!ImGuiBridge.mdb_imgui_init())
                {
                    var dxVersion = ImGuiBridge.mdb_imgui_get_dx_version();
                    ModLogger.LogInternal(LOG_TAG, $"[ERROR] Failed to initialize native ImGui. DX Version: {dxVersion}");
                    return false;
                }

                _drawCallback = DrawFrame;
                _drawCallbackPtr = Marshal.GetFunctionPointerForDelegate(_drawCallback);
                ImGuiBridge.mdb_imgui_register_draw_callback(_drawCallbackPtr);

                _initialized = true;
                ModLogger.LogInternal(LOG_TAG, $"[INFO] ImGui initialized successfully. DX Version: {DirectXVersion}");
                return true;
            }
            catch (Exception ex)
            {
                ModLogger.LogInternal(LOG_TAG, $"[ERROR] Exception during initialization: {ex.Message}");
                return false;
            }
        }

        private void DrawFrame()
        {
            try
            {
                OnDraw?.Invoke();
            }
            catch (Exception ex)
            {
                ModLogger.LogInternal(LOG_TAG, $"[ERROR] Exception in DrawFrame: {ex.Message}");
            }
        }

        /// <summary>
        /// Set the toggle key for ImGui input capture.
        /// </summary>
        public void SetToggleKey(int vkCode)
        {
            ImGuiBridge.mdb_imgui_set_toggle_key(vkCode);
        }

        /// <summary>
        /// Shutdown ImGui and cleanup resources.
        /// </summary>
        public void Shutdown()
        {
            if (!_initialized) return;

            ModLogger.LogInternal(LOG_TAG, "[INFO] Shutting down ImGui...");

            try
            {
                ImGuiBridge.mdb_imgui_register_draw_callback(IntPtr.Zero);
                ImGuiBridge.mdb_imgui_shutdown();

                _initialized = false;
                _drawCallback = null;
                _drawCallbackPtr = IntPtr.Zero;

                ModLogger.LogInternal(LOG_TAG, "[INFO] ImGui shutdown complete");
            }
            catch (Exception ex)
            {
                ModLogger.LogInternal(LOG_TAG, $"[ERROR] Exception during shutdown: {ex.Message}");
            }
        }

        public void Dispose()
        {
            if (_disposed) return;
            _disposed = true;
            Shutdown();
            GC.SuppressFinalize(this);
        }

        ~ImGuiController()
        {
            Dispose();
        }
    }

    #endregion
}
